force-app/main/default/objects/vf_Project__c/vf_Project__c.object-meta.xml
<CustomObject>
    <label>Project</label>
    <pluralLabel>Projects</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Project Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to store volunteer project information</description>
</CustomObject>