force-app/main/default/objects/vf_Project__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
    <description>Project end date</description>
    <inlineHelpText>Date when the project is scheduled to end</inlineHelpText>
</CustomField>