force-app/main/default/objects/vf_Project__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
    <description>Latitude coordinate of project location</description>
    <inlineHelpText>Latitude coordinate of project location for geographical matching</inlineHelpText>
</CustomField>