force-app/main/default/objects/vf_Project__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <referenceTo>vf_Staff__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
    <description>Staff member who manages this project</description>
    <inlineHelpText>Staff member responsible for managing this project</inlineHelpText>
</CustomField>