force-app/main/default/objects/vf_Project__c/fields/Required_Resources__c.field-meta.xml
<CustomField>
    <fullName>Required_Resources__c</fullName>
    <label>Required Resources</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of resources required for the project</description>
    <inlineHelpText>List of resources required for the project. Stored in JSON format.</inlineHelpText>
</CustomField>