force-app/main/default/objects/vf_Project__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON structure of project schedule</description>
    <inlineHelpText>Project schedule details. Stored in JSON format.</inlineHelpText>
</CustomField>