force-app/main/default/objects/vf_Project__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <description>Project start date</description>
    <inlineHelpText>Date when the project is scheduled to start</inlineHelpText>
</CustomField>